--- a/css/style.css
+++ b/css/style.css
@@ -9,69 +9,6 @@ body {
   background: linear-gradient(135deg, #ff9a9e, #fad0c4);
 }
 
-.hide {
-  display: none;
-}
-
-.popup {
-  width: 500px;
-  height: 400px;
-  position: fixed;
-  text-align: center;
-  font-size: 22px;
-  top: 50%;
-  left: 50%;
-  padding: 20px;
-  background: red;
-  border: 3px solid #000;
-  transform: translate(-50%, -50%);
-  opacity: 0;
-  pointer-events: none;
-  z-index: 99999;
-  animation: show 0.8s ease forwards;
-  animation-delay: 0.1s;
-}
-
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0); /* mulai transparan */
-  opacity: 0;
-  pointer-events: none;
-  z-index: 99990;
-  animation: overlayShow 0.1s forwards 0.1s; /* muncul otomatis */
-}
-@keyframes overlayShow {
-  to {
-    background: rgba(0, 0, 0, 0.5);
-    opacity: 1;
-    pointer-events: auto;
-  }
-}
-#popupToggle:checked ~ .popup {
-  animation: hide 0.5s ease forwards;
-}
-
-#popupToggle:checked ~ .overlay {
-  opacity: 0;
-  pointer-events: none;
-}
-
-#popupToggle:checked ~ .overlay {
-  animation: overlayHide 0.5s forwards;
-}
-.closeBtn {
-  position: absolute;
-  top: 5px;
-  right: 30px;
-  cursor: pointer;
-  font-size: 20px;
-  font-weight: bold;
-}
-
 /* Style Utama */
 
 .audio-btn {
@@ -234,8 +171,8 @@ h1 {
   height: 210px;
   background-image: url(../img/love2.png);
   position: absolute;
-  top: 38.5%;
-  margin-left: 550px;
+  top: 29%;
+  margin-left: 43%;
 }
 
 /* animasi */
